--- a/vignettes/archR.Rmd
+++ b/vignettes/archR.Rmd
@@ -154,7 +154,7 @@ inputSeqsRaw <- archR::prepare_data_from_FASTA(fasta_fname = inputFname,
 
 nSeqs <- length(inputSeqsRaw)
 positions <- seq(1, Biostrings::width(inputSeqsRaw[1]))
-sinuc <- Biostrings::DNA_BASES
+
 
 ```
 
@@ -196,8 +196,10 @@ archRconfig <- archR::archR_set_config(
         k_min = 1,
         k_max = 20,
         mod_sel_type = "stability",
-        bound = 10^-8,
+        bound = 10^-6,
         inner_chunk_size = 100,
+        result_aggl = "ward.D", 
+        result_dist = "euclid",
         flags = list(debug = FALSE, time = TRUE, verbose = TRUE,
                      plot = FALSE)
 )
