Following changes: - inner_chunk_size changed to chunk_size in set_config - n_iterations changed to n_runs in set_config - all occurrences in various files reflect the change

--- a/vignettes/archR.Rmd
+++ b/vignettes/archR.Rmd
@@ -195,12 +195,12 @@ Setup archR configuration as follows.
 archRconfig <- archR::archR_set_config(
         parallelize = TRUE,
         n_cores = 2,
-        n_iterations = 100,
+        n_runs = 100,
         k_min = 1,
         k_max = 20,
         mod_sel_type = "stability",
         bound = 10^-6,
-        inner_chunk_size = 100,
+        chunk_size = 100,
         result_aggl = "ward.D", 
         result_dist = "euclid",
         flags = list(debug = FALSE, time = TRUE, verbose = TRUE,
